# auth-service

./: Dockerfile  pyproject.toml
alembic/: env.py
src/: main.py
src/api/: dependencies.py
src/api/v1/: __init__.py  user.py
src/core/: config.py  schemas.py
src/db/: crud.py  models.py  session.py
src/db/crud/: user_crud.py
src/db/models/: user.py
src/schemas/: user.py
